--- a/nextjs-starter/package.json
+++ b/nextjs-starter/package.json
@@ -26,6 +26,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.9.2",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
