--- a/nextjs-starter/package.json
+++ b/nextjs-starter/package.json
@@ -33,6 +33,7 @@
     "next-mdx-remote": "^5.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
