--- a/nextjs-starter/package.json
+++ b/nextjs-starter/package.json
@@ -34,6 +34,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-slugify": "^4.0.1",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
